# remote_learning_backend

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
api/: CMakeLists.txt
api/benchmark/: CMakeLists.txt
api/benchmark/include/benchmark/: benchmark.hpp
api/configs/: config_vars.docker.yaml  config_vars.yaml  static_config.yaml
api/docs/: openapi.yaml  swagger.json
api/include/api/aws/: s3.hpp
api/include/api/handlers/: assignment_add.hpp  assignment_content_get.hpp  assignment_mark_add.hpp  assignment_solution_add.hpp  assignment_solution_content_get.hpp  generate_presigned_url.hpp  homework.hpp  login.hpp  message_send.hpp  register.hpp  student_assignments_get.hpp  student_diary_get.hpp  subject_group_messages_get.hpp  subject_groups_get.hpp  teacher_assignments_get.hpp
api/include/api/handlers/admin/: department_add.hpp  department_group_add.hpp  faculty_add.hpp  faculty_create.hpp  full_university_info_get.hpp  grant_admin_rules.hpp  student_add.hpp  student_to_existing_subject_group_add.hpp  subject_add.hpp  subject_group_add.hpp  subject_group_as_department_group_add.hpp  teacher_add.hpp  teacher_add_to_faculty.hpp  teacher_rank_add.hpp  university_add.hpp
api/include/api/handlers/middlewares/: MiddlewareCors.hpp
api/include/api/handlers/pipelines/: CorsPipelineBuilder.hpp
api/include/api/handlers/validators/: ParameterValidator.hpp  RegexValidator.hpp
api/include/api/pg/: PgDao.hpp
api/include/api/pg/auth/: checker_factory.hpp  user_info_cache.hpp
api/src/: main.cpp
api/src/api/handlers/: assignment_add.cpp  assignment_content_get.cpp  assignment_mark_add.cpp  assignment_solution_add.cpp  assignment_solution_content_get.cpp  generate_presigned_url.cpp  homework.cpp  login.cpp  message_send.cpp  register.cpp  student_assignments_get.cpp  student_diary_get.cpp  subject_group_messages_get.cpp  subject_groups_get.cpp  teacher_assignments_get.cpp
api/src/api/handlers/admin/: department_add.cpp  department_group_add.cpp  faculty_add.cpp  faculty_create.cpp  full_university_info_get.cpp  grant_admin_rules.cpp  student_add.cpp  student_to_existing_subject_group_add.cpp  subject_add.cpp  subject_group_add.cpp  subject_group_as_department_group_add.cpp  teacher_add.cpp  teacher_add_to_faculty.cpp  teacher_rank_add.cpp  university_add.cpp
api/src/api/handlers/validators/: RegexValidator.cpp
api/unit_tests/: CMakeLists.txt
api/unit_tests/src/: hello_test.cpp
aws/: cors-config.json  setup_s3.sh
chat/: CMakeLists.txt
configs/: cmake_static_config.template.yaml  config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml
scripts/: infinite_loop.sh  install_env.sh  install_userver_dependencies.sh  run_api_docker.sh  run_postgres_docker.sh
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  (+2 more)
(+26 files in other folders)
